# plex-webhook-newrelic

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker-publish.yaml
